# python-gen-model

./: README.md  pyproject.toml
src/python_gen_model/: __about__.py  __init__.py  gen_model.py  main.py  python_gen_model.py
src/python_gen_model/enum/: enum.py
src/python_gen_model/model/: __init__.py  abstract_model.py  model_utils.py  peewee_model.py  pydantic_model.py  sqlmodel_model.py  tortoise_model.py
